--- a/ApiProject/ApiProject.Core/ApiProject.Core.csproj
+++ b/ApiProject/ApiProject.Core/ApiProject.Core.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstract\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
