--- a/ApiProject/ApiProject.Entities/ApiProject.Entities.csproj
+++ b/ApiProject/ApiProject.Entities/ApiProject.Entities.csproj
@@ -1,14 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="NewFile1.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <Folder Include="Concrete\" />
     <Folder Include="Dtos\" />
   </ItemGroup>
 
