--- a/ApiProject/ApiProject.Entities/ApiProject.Entities.csproj
+++ b/ApiProject/ApiProject.Entities/ApiProject.Entities.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Concrete\" />
     <Folder Include="Dtos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiProject.Core\ApiProject.Core.csproj" />
   </ItemGroup>
 
 </Project>
