repository base added

--- a/ApiProject/ApiProject.Data/ApiProject.Data.csproj
+++ b/ApiProject/ApiProject.Data/ApiProject.Data.csproj
@@ -1,7 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+    <Folder Include="Concrete\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiProject.Core\ApiProject.Core.csproj" />
+    <ProjectReference Include="..\ApiProject.Entities\ApiProject.Entities.csproj" />
+  </ItemGroup>
 
 </Project>
