--- a/ApiProject/ApiProject.Core/ApiProject.Core.csproj
+++ b/ApiProject/ApiProject.Core/ApiProject.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
   </ItemGroup>
 
 </Project>
