--- a/ApiProject/ApiProject.Services/ApiProject.Services.csproj
+++ b/ApiProject/ApiProject.Services/ApiProject.Services.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Concrete\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiProject.Core\ApiProject.Core.csproj" />
+    <ProjectReference Include="..\ApiProject.Data\ApiProject.Data.csproj" />
+    <ProjectReference Include="..\ApiProject.Entities\ApiProject.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
