--- a/ApiProject/ApiProject.API/Properties/launchSettings.json
+++ b/ApiProject/ApiProject.API/Properties/launchSettings.json
@@ -20,8 +20,7 @@
     "ApiProject.API": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
